# VMO_RBCS_HMI

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.github/workflows/: ci-cd.yml
components/app/: CMakeLists.txt  app_params.c  app_states.c  app_ui_helpers.c
components/app/include/: app_common.h  app_states.h
components/esp_ticks/: CMakeLists.txt  Kconfig  LICENSE  esp_ticks.c  idf_component.yml
components/esp_ticks/examples/: esp_ticks_example.c
components/esp_ticks/include/: esp_ticks.h
components/hsm/: CHANGELOG.md  CMakeLists.txt  Kconfig  MIGRATION_GUIDE.md  README.md  hsm.c  hsm.h  hsm_config_template.h  idf_component.yml
components/hsm/examples/: basic_example.c  hierarchical_example.c  multiple_timer_stm32_example.c  timer_advanced_example.c  timer_example_esp32.c  timer_example_stm32.c  transition_param_example.c
components/hsm/include/: hsm.h
components/modbus_master_manager/: CMakeLists.txt  modbus_master_manager.c
components/modbus_master_manager/include/: modbus_master_manager.h
components/ui/: CMakeLists.txt  CMakeLists.txt.squareline  filelist.txt  project.info  setup_ui.py  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/components/: ui_comp.c  ui_comp.h  ui_comp_buttoncontainer.c  ui_comp_buttoncontainer.h  ui_comp_hook.c  ui_comp_hook.h
components/ui/fonts/: ui_font_H1.c  ui_font_H11.c  ui_font_H2.c
components/ui/images/: ui_img_1_blue_3_5_png.c  ui_img_1_blue_3_8_png.c  ui_img_battery_png.c  ui_img_group_13_png.c  ui_img_group_14_png.c  ui_img_group_9_png.c  ui_img_help_1_png.c  ui_img_imgmainmanualswapbat_png.c  ui_img_imgmainrbtoslot1_png.c  ui_img_imgmainrbtoslot2_png.c  ui_img_imgmainrbtoslot3_png.c  ui_img_imgmainrbtoslot4_png.c  ui_img_imgmainrbtoslot5_png.c  ui_img_imgmainslotbackground_png.c  ui_img_imgmainslotdetailbackground_png.c  ui_img_imgmainslothidebg_png.c  ui_img_imgmainslotserialdetail_png.c  ui_img_imgmainslotshowbg_png.c  ui_img_imgsettingbackicon_png.c  ui_img_left_side_2_png.c  ui_img_manual_png.c  ui_img_robot_4_png.c  ui_img_scrmain_batteryempty_png.c  ui_img_scrmain_batteryicon_png.c  ui_img_scrmain_batterywarning_png.c  ui_img_scrmain_robotcharging_png.c  ui_img_scrmain_robotfullbattery_png.c  ui_img_scrmain_robotlowbattery_png.c  ui_img_scrnotconnected_warningicon_png.c  ui_img_scrnotconnecticon_png.c  ui_img_scrsettingicon_png.c  ui_img_setting_1_png.c  ui_img_vmo_logo2_png.c  ui_img_vmo_logo_png.c  ui_img_vmocharger_png.c  ui_img_z7358953714029_6a7a8c912df9884a2fa156d0bc4a5d11_1_png.c  ui_img_z7358954739191_fc0a5adc5a60d57fd238548ea3e5e0bb_1_png.c
components/ui/screens/: ui_scrDetail.c  ui_scrDetail.h  ui_scrMain.c  ui_scrMain.h  ui_scrMainSlot.c  ui_scrMainSlot.h  ui_scrManualControl12.c  ui_scrManualControl12.h  ui_scrManualControl22.c  ui_scrManualControl22.h  ui_scrProcess.c  ui_scrProcess.h  ui_scrSetting.c  ui_scrSetting.h  ui_scrSplash.c  ui_scrSplash.h
components/ui_support/: CMakeLists.txt  ui_support.c
components/ui_support/include/: ui_support.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
